# tlockr

./: .clang-format  .gitignore  CMakeLists.txt  Cargo.toml  README.md  TESTS.md  build.rs  output.txt
.github/workflows/: default.yml
cpp/: CMakeLists.txt
cpp/src/: button_map.cpp  event.hpp  event_handler.cpp  event_handler.hpp  ffi.cpp  ffi.hpp  interface.cpp  interface.hpp  keyboard.cpp  keyboard.hpp  keyboard_repeat.cpp  keyboard_repeat.hpp  keymap.cpp  logging.cpp  logging.hpp  pointer.cpp  pointer.hpp  qt_bridge.cpp  qt_bridge.hpp  render.cpp  render.hpp
src/: buffer.rs  event.rs  fallback.rs  ffi.rs  interface.rs  keyboard.rs  lock.rs  main.rs  renderer.rs  state.rs
src/auth/: event_loop.rs  mod.rs  state.rs
src/buffer/: manager.rs  mod.rs  pool.rs
src/cli/: args.rs  cli.rs  mod.rs  run.rs
src/config/: global.rs  loader.rs  merge.rs  mod.rs  run.rs  theme.rs
src/event/: event.rs  event_loop.rs  event_param.rs  event_type.rs  mod.rs  tagged_fd.rs
src/ffi/: ffi.rs  interface.rs  mod.rs
src/graphics/: mod.rs  output.rs  renderer.rs
src/input/: keyboard.rs  mod.rs  pointer.rs  seat.rs
src/lock/: lock.rs
src/registry/: registry.rs
src/shared/: ffi.rs  interface.rs  log.rs  mod.rs  state.rs
src/wayland/: buffer.rs  empty.rs  event.rs  interface.rs  keyboard.rs  lock.rs  mod.rs  renderer.rs  state.rs  wrappers.rs
src/wayland/buffer/: manager.rs  pool.rs
src/wayland/communication/: channel.rs  epoll.rs  event.rs  handler.rs  manager.rs  mod.rs  param.rs  pipe.rs  serial.rs
src/wayland/dispatch/: buffer.rs  empty.rs  keyboard.rs  lock.rs  mod.rs  output.rs  registry.rs
src/wayland/event/: event.rs  event_loop.rs  event_param.rs  event_type.rs  handler.rs  loop.rs  manager.rs  mod.rs  serial.rs
src/wayland/graphics/: buffer.rs  mod.rs  output.rs  renderer.rs  wrapper.rs
src/wayland/input/: keyboard.rs  mod.rs  pointer.rs  seat.rs
src/wayland/lock/: lock.rs
src/wayland/registry/: registry.rs
test/: TESTS.md  test_anim.qml  test_img.qml  test_keys.qml  test_lock.qml  test_mouse.qml
themes/: basic_dark.qml  basic_light.qml
