# SPDX-License-Identifier: GPL-3.0-or-later
# Copyright (C) 2025, Nathan Gill

[package]
name = "tlockr"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
nix = { version = "0.30.1", features = [ "fs", "event" ] }
wayland-client = "0.31.10"
wayland-protocols = { version = "0.32.8", features = [ "client", "staging" ] }

[build-dependencies]
cmake = "0.1"
