# SPDX-License-Identifier: GPL-3.0-or-later
# Copyright (C) 2025, Nathan Gill

[package]
name = "tlockr"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
chrono = "0.4.41"
log = "0.4.27"
nix = { version = "0.30.1", features = [ "fs", "event" ] }
pam = { git = "https://github.com/1wilkens/pam", branch = "master"}
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
uzers = "0.12.1"
wayland-client = "0.31.10"
wayland-protocols = { version = "0.32.8", features = [ "client", "staging" ] }

[build-dependencies]
cmake = "0.1"
